Docker/alpine-cloud/k8s/SSO/Deployment_krakend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: krakend
  labels:
    app.kubernetes.io/name: krakend
    app.kubernetes.io/instance: krakend
    app.kubernetes.io/version: "2.2.2"
spec:
  type: LoadBalancer
  ports:
    - port: 8443
      name: krakend-port
      targetPort: 8443
  selector:
    app.kubernetes.io/name: krakend
    app.kubernetes.io/instance: krakend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
  labels:
    app.kubernetes.io/name: krakend
    app.kubernetes.io/instance: krakend
    app.kubernetes.io/version: "2.2.2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: krakend
      app.kubernetes.io/instance: krakend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: krakend
        app.kubernetes.io/instance: krakend
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: krakend 
      containers:
      - name: krakend
        image: devopsfaith/krakend:2.0.5
        volumeMounts:
        - name: config-volume
          mountPath: /etc/krakend/krakend.json
          subPath: krakend.json
        - name: config-volume
          mountPath: /etc/krakend/settings/service.json
          subPath: service.json
        - name: config-volume
          mountPath: /etc/krakend/partials/jwt_settings.tmpl
          subPath: jwt_settings.tmpl
        - name: config-volume
          mountPath: /etc/krakend/partials/rate_limit_backend.tmpl
          subPath: rate_limit_backend.tmpl
        - name: config-volume
          mountPath: /etc/krakend/tls/certfile.pem
          subPath: certfile.pem
        - name: config-volume
          mountPath: /etc/krakend/tls/keyfile.pem
          subPath: keyfile.pem
        ports:
        - containerPort: 8443
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8443" ]
